--- a/contact-me.html
+++ b/contact-me.html
@@ -9,7 +9,7 @@
     <p>MY EMAIL: reddysekhar.mf@gmail.com</p>
     <p>MY PHONE NUMBER: 9550213379</p>
     <hr>
-    <form class="" action="mailto:info@reddysekhar.mf@gmail.com" method="post" enctype="text/plain">
+    <form class="" action="mailto:reddysekhar.mf@gmail.com" method="post" enctype="text/plain">
       <label>your name:</label>
       <input type="text" name="yourname" value=""><br>
       <label>your mail:</label>
